Added parquet file and kafka compression config. Added dh engine table cleanup on session close